k8s/gechoserver/http-echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: gechoserver
  namespace: dev
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app.kubernetes.io/name: gechoserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gechoserver
  namespace: dev
  labels:
    app.kubernetes.io/name: gechoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gechoserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gechoserver
    spec:
      containers:
      - name: gechoserver
        image: gcr.io/google-containers/echoserver:1.10
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: "0.5"
            memory: "0.5Gi"
          limits:
            cpu: "0.5"
            memory: "0.5Gi"

      restartPolicy: Always
