k8s/gechoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gechoserver
  namespace: dev
spec:
  rules:
  defaultBackend:
    service:
      name: gechoserver
      port:
        number: 8080
